--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar dependencias,
                 herencias en css y que tan complejo es nuestro proyecto.
             </p>
-            <img src="/images/dom.png" alt="Estructura de DOM" title="Estructura de DOM">
+            <img src="./images/dom.png" alt="Estructura de DOM" title="Estructura de DOM">
             
             <h3 id="semantica">Semantica</h3>
             <p>
@@ -180,7 +180,7 @@
             <p> Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir 
                 la presentación de documentos HTML
             </p>
-            <img src="/images/CSS.png" alt="Ilustración de CSS" title="Ilustración de CSS">
+            <img src="./images/CSS.png" alt="Ilustración de CSS" title="Ilustración de CSS">
 
         </section>
         
