--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles-logical.css">
+
+
+    <meta property="og:title" content="Mi proyecto del curso esencial de HTML & CSS" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Mi primer desarrollo web" />
+    <meta property="og:url" content="https://cristiandavid02.github.io/curso-esencial-html-css/" />
+    <meta property="og:image" content="https://cristiandavid02.github.io/images/GitHub.png" />
+    
 </head>
 
 
